[gd_scene load_steps=11 format=3 uid="uid://dw1xgmwrceoh"]

[ext_resource type="Script" path="res://music_manager.gd" id="1_e20vc"]
[ext_resource type="AudioStream" uid="uid://ctkl1tguxyf4m" path="res://music/8bit/8BitDrums.mp3" id="1_wfxat"]
[ext_resource type="AudioStream" uid="uid://dewwkvsvmx6tf" path="res://music/8bit/8bitBass.mp3" id="2_uckae"]
[ext_resource type="AudioStream" uid="uid://xhaene6uyvw6" path="res://music/8bit/8bitLead.mp3" id="3_rif51"]
[ext_resource type="AudioStream" uid="uid://g8vtycx66g8p" path="res://music/hippie/hippieDrums.mp3" id="4_bkh5r"]
[ext_resource type="AudioStream" uid="uid://c2h2018jm846x" path="res://music/hippie/hippieBassAndChords.mp3" id="5_osvp1"]
[ext_resource type="AudioStream" uid="uid://bv5ixn5jwe7ku" path="res://music/hippie/hippieLead.mp3" id="6_defgs"]
[ext_resource type="AudioStream" uid="uid://demcog2gluko7" path="res://music/rock/rockDrums.mp3" id="7_lgkvc"]
[ext_resource type="AudioStream" uid="uid://khms1irye60w" path="res://music/rock/rockBass.mp3" id="8_hhppp"]
[ext_resource type="AudioStream" uid="uid://cc3xeahmjxpit" path="res://music/rock/rockLead.mp3" id="9_lx4dy"]

[node name="MusicManager" type="Node2D"]
script = ExtResource("1_e20vc")

[node name="8bitDrums" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_wfxat")
autoplay = true

[node name="8bitBass" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_uckae")
autoplay = true

[node name="8bitLead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rif51")
autoplay = true

[node name="hippieDrums" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bkh5r")
autoplay = true

[node name="hippieChords" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_osvp1")
autoplay = true

[node name="hippieLead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_defgs")
autoplay = true

[node name="rockDrums" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lgkvc")
autoplay = true

[node name="rockBass" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_hhppp")
autoplay = true

[node name="rockLead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lx4dy")
autoplay = true
